--- a/lesson2/1.html
+++ b/lesson2/1.html
@@ -37,7 +37,8 @@
       /*
       Оператор ++ имеет приоритет выше, чем +.
       На 28 строке уже была инкрементация a. Здесь оно уже равно 2.
-      Далее мы ещё раз инкрементируем a, префиксная форма возвращает инкрементированное значение, получаем 3.
+      Далее мы ещё раз инкрементируем a, префиксная форма возвращает 
+      инкрементированное значение, получаем 3.
       И дальше складываем с 2, получаем 5.
    */
       c = 2 + ++a;
@@ -46,7 +47,8 @@
       /*
       Оператор ++ имеет приоритет выше, чем +.
       На 34 строке уже была инкрементация b. Здесь оно уже равно 2.
-      Далее мы ещё раз инкрементируем b, постфиксная форма возвращает оригинальное значение, получаем 2.
+      Далее мы ещё раз инкрементируем b, постфиксная форма возвращает 
+      оригинальное значение, получаем 4.
       И дальше складываем с 2, получаем 2.
    */
       d = 2 + b++;
