--- a/lesson2/2.html
+++ b/lesson2/2.html
@@ -21,7 +21,8 @@
       let x = 1 + (a *= 2);
 
       /*
-  В строке 21 первым делом происходит умножение a на 2 с последующим переопределением a.
+  В строке 21 первым делом происходит умножение a на 2 с последующим 
+  переопределением a.
   Поэтому в 30 строке a = 4.
   Далее новое значение (4) складывается с 1 и присваивается x.
   Итого x = 5.
