--- a/lesson2/6.html
+++ b/lesson2/6.html
@@ -26,11 +26,12 @@ console.log(declinationOfNumber(5, "стул", "стула", "стульев"));
       "use strict";
 
       function declinationOfNumber(count, one, two, five) {
-        const count_ends = count % 10;
         switch (true) {
-          case count_ends === 1 && (count < 10 || count > 20):
+          case count % 10 === 1 && (count < 10 || (count > 20 && count < 100)):
             return one;
-          case 2 <= count_ends && count_ends <= 4:
+          case 2 <= count % 10 &&
+            count % 10 <= 4 &&
+            (count < 10 || (count > 20 && count < 100)):
             return two;
           default:
             return five;
@@ -38,7 +39,7 @@ console.log(declinationOfNumber(5, "стул", "стула", "стульев"));
       }
 
       // Число яблок, можно пробовать поставить свое целое, положительное число.
-      const applesNumber = 21;
+      const applesNumber = 22;
       // Получаем от функции одно из слов "яблоко", "яблока" или "яблок".
       const word = declinationOfNumber(
         applesNumber,
